# riscv-isa

./: Cargo.toml  README.md  shell.nix
opcodes/: README.md  generate_instructions.sh  instr_dict.json  instr_gen.js
src/: config.rs  error.rs  format.rs  instrtrait.rs  instruction.rs  lib.rs  main.rs  opcode.rs  rtype.rs  stype.rs
src/data/: access.rs  instructions.rs  mod.rs  system.rs
src/disasm/: config.rs  disasm.rs  disasm_error.rs  formatter.rs  instruction_record.rs  mod.rs
src/error/: error.rs  mod.rs
src/instr/: b_instruction.rs  builder.rs  i_instruction.rs  instrtrait.rs  instruction.rs  j_instruction.rs  mod.rs  r_instruction.rs  s_instruction.rs  u_instruction.rs
src/model/: extension.rs  format.rs  funct.rs  immediate.rs  instrtrait.rs  instruction.rs  mnemonic.rs  mod.rs  opcode.rs  raw_bits_converter.rs  register.rs  rtype.rs  size.rs  stype.rs  try_from_opcode_binary.rs
src/utils/: bit.rs
